Fixed see more panel not showing up

--- a/front-end/css/index.css
+++ b/front-end/css/index.css
@@ -485,7 +485,7 @@ body {
     border-right: solid 1px var(--main-color);
     display: flex;
     flex-direction: column;
-    margin-bottom: 30px;
+    padding-bottom: 30px;
 }
 
 .search-container {
